syntax = "proto3";

package payment.v1;

//option go_package = "github.com/clava1096/rocket-service/shared/proto/payment/v1;paymentv1";
option go_package = "payment/v1;paymentv1";

// PaymentService — симулятор платёжного шлюза для обработки оплаты заказов.
service PaymentService {
  // PayOrder обрабатывает команду на оплату заказа и возвращает UUID транзакции.
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest — запрос на оплату заказа.
message PayOrderRequest {
  string order_uuid = 1;        // UUID заказа.
  string user_uuid = 2;         // UUID пользователя, инициировавшего оплату.
  PaymentMethod payment_method = 3; // Способ оплаты.
}

// PayOrderResponse — ответ с результатом оплаты.
message PayOrderResponse {
  string transaction_uuid = 1;  // UUID созданной платёжной транзакции.
}

// PaymentMethod — способ оплаты заказа.
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;     // Способ оплаты не указан.
  PAYMENT_METHOD_CARD = 1;            // Банковская карта.
  PAYMENT_METHOD_SBP = 2;             // Система быстрых платежей (СБП).
  PAYMENT_METHOD_CREDIT_CARD = 3;     // Кредитная карта.
  PAYMENT_METHOD_INVESTOR_MONEY = 4;  // Деньги инвестора (внутренний метод).
}